--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ version: '3'
 services:
   www:
     volumes:
-      - /opt/app/server-data:/opt/app/server-data
+      - ./server-data:/opt/app/server-data
     ports:
-      - '80:80'
+      - '6050:80'
     build:
       context: .
     restart: on-failure
